test/end-to-end/runnable/assignment-precedence.crow
main void()
	a nat? = 1,
	a ?? 2 foo= 3

foo= void(a nat, b nat)
	info log "{a} foo= {b}"
