test/end-to-end/compile-errors/option-call-errors.crow
main void()
	int int = -1
	int-opt int? = -1,
	x nat? = int?.abs
	y nat = int-opt?.abs
	z = int?.abs
	()
